tests/NormalTests/paczka1/fuzzy1/29689874.err
Error in line 1: gl8EW A204 21,58
Error in line 2: 08P A204 21,1
Error in line 7: 08P A207 308,5
Error in line 8: 08P A204 1,8
Error in line 19: gl8EW A215 18,1
Error in line 10: B6P8ywi9Qe A207 6,8
Error in line 17: S79 S79 98,5
Error in line 27: ROOuk9K9MYZ S79 40,9
Error in line 29: 08P A204 17,0
